add placeholder-icon to input template

--- a/src/fields/ion-input.html
+++ b/src/fields/ion-input.html
@@ -1,3 +1,4 @@
 <label class="item item-input">
+    <i ng-show="options.templateOptions.icon" class="icon placeholder-icon" ng-class="options.templateOptions.icon"></i>
   <input ng-model="model[options.key]" placeholder="{{options.templateOptions.placeholder}}" type="{{options.templateOptions.type}}">
 </label>
